--- a/_posts/2015-07-23-Resume.md
+++ b/_posts/2015-07-23-Resume.md
@@ -6,6 +6,10 @@ categories:
 excerpt: 
 ---
 
+* content
+{:toc}
+
+
 # 联系方式
 
 - 手机：18758554386 
@@ -29,7 +33,7 @@ excerpt:
 
 ##个人评价
 
- > 为人踏实诚恳，做事勤快。对人工智能有浓厚的兴趣，喜欢软件开发工作。
+ >为人踏实诚恳，做事勤快。对人工智能有浓厚的兴趣，喜欢软件开发工作。
 
  *了解Python语言和Flask框架，用Flask、Werkzeug、Jinjia2和Flask-SQLAlchemy等搭建了一个博客程序；
  
