--- a/_posts/2015-07-23-Resume.md
+++ b/_posts/2015-07-23-Resume.md
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: post
 title:  "简历"
 date:   2015-07-23 11:06:05
 categories: 
@@ -35,15 +35,15 @@ excerpt:
 
  >为人踏实诚恳，做事勤快。对人工智能有浓厚的兴趣，喜欢软件开发工作。
 
- > *了解Python语言和Flask框架，用Flask、Werkzeug、Jinjia2和Flask-SQLAlchemy等搭建了一个博客程序；
+ > 了解Python语言和Flask框架，用Flask、Werkzeug、Jinjia2和Flask-SQLAlchemy等搭建了一个博客程序；
 >
- > *了解re、urllib2、threading，Queue等几个模块，分别用正则表达式分析和Scrapy写过爬虫程序；
+ > 了解re、urllib2、threading，Queue等几个模块，分别用正则表达式分析和Scrapy写过爬虫程序；
 >
- > *会用git管理代码；
+ > 会用git管理代码；
 >
- > *了解基本的前端技术：HTML、CSS等；
+ > 了解基本的前端技术：HTML、CSS等；
 >   
- > *具备Linux的常用操作和基本知识，用过一段时间的ubuntu系统；
+ > 具备Linux的常用操作和基本知识，用过一段时间的ubuntu系统；
 > 
 ---
 
