--- a/_posts/2015-07-25-web.md
+++ b/_posts/2015-07-25-web.md
@@ -14,7 +14,7 @@ excerpt:
 
 ---
 
-####Tcp/Ip：
+####TCP/IP：
 
 * 互联网协议包含了上百种协议标准，但是最重要的两个协议是TCP和IP协议，所以，大家把互联网的协议简称TCP/IP协议。
 
@@ -27,6 +27,7 @@ excerpt:
 > * TCP协议则是建立在IP协议之上的。TCP协议负责在两台计算机之间建立可靠连接，保证数据包按顺序到达。TCP协议会通过握手建立连接，然后，对每个IP包编号，确保对方按顺序收到，如果包丢掉了，就自动重发。
 
 * 许多常用的更高级的协议都是建立在TCP协议基础上的，比如用于浏览器的HTTP协议、发送邮件的SMTP协议等。
+
 ---
 
 ####HTTP:
@@ -35,7 +36,7 @@ excerpt:
 
 * HTTP响应分为Header和Body两部分（Body是可选项）
 
-    * Request Headers表示浏览器发送给服务器的请求头：
+  * Request Headers表示浏览器发送给服务器的请求头：
     
     方法：GET还是POST，GET仅请求资源，POST会附带用户数据；
     
@@ -47,14 +48,11 @@ excerpt:
 
     如果是POST，那么请求还包括一个Body，包含用户数据。
     
-    * Response Headers是浏览器接收到的服务器的响应头：
+  * Response Headers是浏览器接收到的服务器的响应头：
     
-    响应代码：200表示成功，3xx表示重定向，4xx表示客户端发送的请求有错误，5xx表示服务器端处理时发生了错误；
-
+   > 响应代码：200表示成功，3xx表示重定向，4xx表示客户端发送的请求有错误，5xx表示服务器端处理时发生了错误；
     响应类型：由Content-Type指定；
-
     以及其他相关的Header；
-
     通常服务器的HTTP响应会携带内容，也就是有一个Body，包含响应的内容，网页的HTML源码就在Body中。
 
 * 当浏览器读取到HTML源码后，它会解析HTML，显示页面，然后，根据HTML里面的各种链接，再发送HTTP请求给服务器，拿到相应的图片、视频、Flash、JavaScript脚本、CSS等各种资源，最终显示出一个完整的页面。
