--- a/_posts/2015-07-25-web.md
+++ b/_posts/2015-07-25-web.md
@@ -10,7 +10,7 @@ excerpt:
 {:toc}
 
 
-### 学习一下Tcp/Ip/Http三大协议
+### 学习一下TCP/IP/HTTP三大协议
 
 ---
 
@@ -50,9 +50,12 @@ excerpt:
     
   * Response Headers是浏览器接收到的服务器的响应头：
     
-   > 响应代码：200表示成功，3xx表示重定向，4xx表示客户端发送的请求有错误，5xx表示服务器端处理时发生了错误；
+    响应代码：200表示成功，3xx表示重定向，4xx表示客户端发送的请求有错误，5xx表示服务器端处理时发生了错误；
+   
     响应类型：由Content-Type指定；
+    
     以及其他相关的Header；
+    
     通常服务器的HTTP响应会携带内容，也就是有一个Body，包含响应的内容，网页的HTML源码就在Body中。
 
 * 当浏览器读取到HTML源码后，它会解析HTML，显示页面，然后，根据HTML里面的各种链接，再发送HTTP请求给服务器，拿到相应的图片、视频、Flash、JavaScript脚本、CSS等各种资源，最终显示出一个完整的页面。
@@ -61,6 +64,7 @@ excerpt:
 
 * HTTP协议同时具备极强的扩展性，虽然浏览器请求的是比如http://www.sina.com.cn/的首页，但是新浪在HTML中可以链入其他服务器的资源，比如<img src="http://i1.sinaimg.cn/home/2013/1008/U8455P30DT20131008135420.png">，从而将请求压力分散到各个服务器上，并且，一个站点可以链接到其他站点，无数个站点互相链接起来，就形成了World Wide Web，简称WWW。
 
+---
 
 > 参考文章：[廖雪峰的官方网站](http://www.liaoxuefeng.com/wiki/0014316089557264a6b348958f449949df42a6d3a2e542c000/001432011939547478fd5482deb47b08716557cc99764e0000)
 
