add android actionbar

--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Andriod app"
+title:  "Android 开发环境安装"
 date:   2015-12-11 11:08:05
-categories: Andriod
+categories: Android
 excerpt: 
 ---
 
