update scrapy-1 post

--- a/_posts/2016-2-18-scrapy-1.md
+++ b/_posts/2016-2-18-scrapy-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "scrapy笔记之"
+title:  "scrapy笔记之探索数据流程"
 date:   2016-2-19 16:12:05
 categories: scrapy 
 excerpt: 
@@ -25,6 +25,62 @@ excerpt:
     Spider处理Response并返回爬取到的Item及(跟进的)新的Request给引擎。
     引擎将(Spider返回的)爬取到的Item给Item Pipeline，将(Spider返回的)Request给调度器。
     (从第二步)重复直到调度器中没有更多地request，引擎关闭该网站。
+        
+* 在有多个起始Url时，对response的处理如何写到一个parse函数里？
+
+* 在parse函数里返回Item时，scrapy会打印爬取item的地址信息
+
+* 调度器(Scheduler)管理request请求队列
+
+* pipelines 模块主要用于清洗spider返回的items，去重，写入数据库。
+
+---
+
+####Item Pipelines模块
+
+* 功能主要是清洗验证spider获得的数据，查重以及写入数据库。主要实现的方法有：process_item，open_spider, close_spider, from_crawler
+
+* 一个实例：
+        实现去重以及写入mongodb数据库。
+        
+
+        import pymongo
+        from scrapy.exceptions import DropItem
+
+
+        class SmzdmCrawlerPipeline(object):
+            
+            def __init__(self, mongodb_domain, mongodb_port, mongodb_db):
+                self.mongodb_domain = mongodb_domain
+                self.mongodb_port = mongodb_port
+                self.mongodb_db = mongodb_db
+                self.ids_seen = set()
+            
+            @classmethod
+            def from_crawler(cls, crawler):
+                return cls(mongodb_domain = crawler.settings.get('MONGODB_DOMAIN'),
+                           mongodb_port = crawler.settings.get('MONGODB_PORT'),
+                           mongodb_db = crawler.settings.get('MONGODB_DB'))
+                
+            def open_spider(self, spider):
+                self.client = pymongo.MongoClient(self.mongodb_domain, self.mongodb_port)
+                self.db = self.client[self.mongodb_db]
+            
+            def close_spider(self, spider):
+                self.client.close()
+                        
+            def process_item(self, item, spider):
+                collection_name = item.__class__.__name__
+                if item['id'] in self.ids_seen:
+                    raise DropItem("dulplicate item found: %s" % item)
+                else:
+                    self.ids_seen.add(item['id'])
+                    print len(self.ids_seen)
+                    self.db[collection_name].insert(dict(item))
+                
+                    return item
+                    
+        根据scrapy终端打印的信息，初步判断运行过程是：通过settings中的pipelines设置启用SmzdmCrawlerPipeline，调用__init__和from_crawler初始化参数，然后spider打开，调用open_spider。每当spider返回一个item，就调用process_item方法处理数据。spider关闭，调用close_spider方法
         
 ---
 
