--- a/_posts/2016-2-18-scrapy-1.md
+++ b/_posts/2016-2-18-scrapy-1.md
@@ -36,7 +36,7 @@ excerpt:
 
 ---
 
-####Item Pipelines模块
+#### Item Pipelines模块
 
 * 功能主要是清洗验证spider获得的数据，查重以及写入数据库。主要实现的方法有：process_item，open_spider, close_spider, from_crawler
 
@@ -82,6 +82,8 @@ excerpt:
                     
         根据scrapy终端打印的信息，初步判断运行过程是：通过settings中的pipelines设置启用SmzdmCrawlerPipeline，调用__init__和from_crawler初始化参数，然后spider打开，调用open_spider。每当spider返回一个item，就调用process_item方法处理数据。spider关闭，调用close_spider方法
         
+* 上述实例在实际运行中存在的问题是：由于ids_seen在spider关闭时就会被销毁，下次运行spider又会生成新的ids_seen，所以不能实现更新的去重功能。实际可以维护一个redis队列来解决。
+        
 ---
 
-> 参考文章：
+> 参考文章：[scrapy官方教程中文版](http://scrapy-chs.readthedocs.org/zh_CN/latest/topics/item-pipeline.html#id2)
