--- a/_posts/2016-2-18-scrapy-1.md
+++ b/_posts/2016-2-18-scrapy-1.md
@@ -43,7 +43,6 @@ excerpt:
 * 一个实例：
         实现去重以及写入mongodb数据库。
         
-
         import pymongo
         from scrapy.exceptions import DropItem
 
@@ -86,4 +85,72 @@ excerpt:
         
 ---
 
+#### 调度器 Scheduler 模块
+
+* 功能主要是调度request，维护request队列。可以通过重写方法结合redis实现对request的去重过滤。主要实现的方法有:from_crawler,from_settings,open,close,enqueue_reauest,next_request,has_pending_requests
+
+* RFPDupeFilter类是scrapy自带的用于检测过滤重复请求的类，主要实现的方法有from_crawler,from_settings,request_seen,可以用redis的set集合重写request_seen来实现对request的去重过滤
+
+        def request_seen(self, request):
+            """
+                use sismember judge whether fp is duplicate.
+            """
+            
+            fp = request_fingerprint(request)   #request_fingerprint 函数生成的请求指纹。
+            if self.server.sismember(self.key,fp):
+                return True
+            self.server.sadd(self.key, fp)
+            return False
+        
+* Scheduler模块会调用RFPDupeFilter类的request_seen方法来过滤重复的request
+
+        def enqueue_request(self, request):
+            if not request.dont_filter and self.df.request_seen(request): #df为RFPDupeFilter的一个实例
+                return
+            self.stats.inc_value('scheduler/enqueued/redis', spider=self.spider)
+            self.queue.push(request)
+        
+        def next_request(self):
+            request = self.queue.pop()
+            if request:
+                self.stats.inc_value('scheduler/dequeued/redis', spider=self.spider)
+            return request
+        Scheduler执行过程为：通过from_settings和from_crawler从settings.py获取参数生成Scheduler实例，蜘蛛开启后，调用open方法，生成队列queue和RFPDupeFilter实例用于管理request队列。当spider返回request时，调用enqueue_request方法把不重复的request加入队列queue，当引擎请求request时，调用next_request返回request给引擎。
+        
+---
+
+#### 下载器中间件 DOWNLOADER_MIDDLEWARES 
+
+* 下载器中间件 DOWNLOADER_MIDDLEWARES 是用于全局修改Scrapy request和response的一个轻量、底层的系统。要激活下载器中间件组件，将其加入到 DOWNLOADER_MIDDLEWARES 设置中。通过value的值设置执行的顺序，None则表示关闭该中间件。
+
+        例如，如果您想要关闭user-agent中间件:
+        DOWNLOADER_MIDDLEWARES = {           
+            'scrapy.contrib.downloadermiddleware.useragent.UserAgentMiddleware': None,
+        }
+        
+* 下载器中间件DOWNLOADER_MIDDLEWARES主要实现的方法有process_request,process_response,process_exception.其中process_request用于处理request,process_response用于处理下载器生成的response,process_exception则用于处理异常
+
+* process_request方法中可以设置request的请求头信息：
+        
+        user_agent_list = ['...']   #可以设置user_agent池
+        def __init__(self, user_agent=''):
+            self.user_agent = user_agent
+
+        def _user_agent(self, spider):
+            if hasattr(spider, 'user_agent'):
+                return spider.user_agent
+            elif self.user_agent:
+                return self.user_agent
+
+            return random.choice(self.user_agent_list)
+
+        def process_request(self, request, spider):
+            ua = self._user_agent(spider)
+            if ua:
+                request.headers.setdefault('User-Agent', ua)
+                
+---
+
 > 参考文章：[scrapy官方教程中文版](http://scrapy-chs.readthedocs.org/zh_CN/latest/topics/item-pipeline.html#id2)
+
+> 参考项目：[distribute_crawler](https://github.com/gnemoug/distribute_crawler)
