--- a/_posts/2016-2-23-linux.md
+++ b/_posts/2016-2-23-linux.md
@@ -14,7 +14,11 @@ excerpt:
         (sudo) rm -rf 目录或者文件夹
          -r 就是向下递归，不管有多少级目录，一并删除; -f 就是直接强行删除，不作任何提示的意思
         例如：rm -rf /var/log    删除/var/log以及其下的所有文件和文件夹
-       
+ 
+* 复制文件：
+
+        (sudo) cp 文件 目标目录
+    
 ---
 
 > 参考文章：
