--- a/_posts/2016-2-18-scrapy-1.md
+++ b/_posts/2016-2-18-scrapy-1.md
@@ -87,7 +87,7 @@ excerpt:
 
 #### 调度器 Scheduler 模块
 
-* 功能主要是调度request，维护request队列。可以通过重写方法结合redis实现对request的去重过滤。主要实现的方法有:from_crawler,from_settings,open,close,enqueue_reauest,next_request,has_pending_requests
+* 功能主要是调度request，维护request队列。可以通过重写方法结合redis实现对request的去重过滤。主要实现的方法有:from_crawler,from_settings,open,close,enqueue_request,next_request,has_pending_requests
 
 * RFPDupeFilter类是scrapy自带的用于检测过滤重复请求的类，主要实现的方法有from_crawler,from_settings,request_seen,可以用redis的set集合重写request_seen来实现对request的去重过滤
 
