update redis post

--- a/_posts/2016-2-24-redis.md
+++ b/_posts/2016-2-24-redis.md
@@ -116,6 +116,47 @@ excerpt:
 
 ---
 
+#### Redis HyperLogLog
+
+* Redis HyperLogLog 是用来做基数统计的算法，HyperLogLog 的优点是，在输入元素的数量或者体积非常非常大时，计算基数所需的空间总是固定的、并且是很小的。
+
+* 在 Redis 里面，每个 HyperLogLog 键只需要花费 12 KB 内存，就可以计算接近 2^64 个不同元素的基 数。这和计算基数时，元素越多耗费内存就越多的集合形成鲜明对比。
+
+* 因为 HyperLogLog 只会根据输入元素来计算基数，而不会储存输入元素本身，所以 HyperLogLog 不能像集合那样，返回输入的各个元素。
+
+* 什么是基数? 基数就是不重复元素的个数。比如数据集 {1, 3, 5, 7, 5, 7, 8}， 那么这个数据集的基数集为 {1, 3, 5 ,7, 8}, 基数(不重复元素)为5。 基数估计就是在误差可接受的范围内，快速计算基数。
+
+* 常用命令：
+
+        1.PFADD key element [element ...] 
+        添加指定元素到 HyperLogLog 中。
+        
+        2.PFCOUNT key [key ...] 
+        返回给定 HyperLogLog 的基数估算值。
+        
+        3.PFMERGE destkey sourcekey [sourcekey ...] 
+        将多个 HyperLogLog 合并为一个 HyperLogLog
+        
+        
+        实例：
+        redis 127.0.0.1:6379> PFADD w3ckey "redis"
+
+        1) (integer) 1
+
+        redis 127.0.0.1:6379> PFADD w3ckey "mongodb"
+
+        1) (integer) 1
+
+        redis 127.0.0.1:6379> PFADD w3ckey "mysql"
+
+        1) (integer) 1
+
+        redis 127.0.0.1:6379> PFCOUNT w3ckey
+
+        (integer) 3
+
+---
+
 #### 其他常用命令
 
 * DEL key : 删除一个key
@@ -152,6 +193,17 @@ excerpt:
         2) "three"
         3) "one"
         4) "two"
+
+* 获取服务器版本号：
+
+        在服务器redis目录运行：
+        redis-cli info|grep "redis_version"
+        
+        登录不上服务器可以在本地redis目录：
+        redis-cli -h (加上服务器地址，如192.168.1.200) info|grep "redis_version"
+        
+        要获取服务器的完整信息：
+        redis-cli -h (加上服务器地址，如192.168.1.200) info
         
 ---
 
