--- a/_posts/2016-2-24-redis.md
+++ b/_posts/2016-2-24-redis.md
@@ -118,6 +118,8 @@ excerpt:
 
 #### Redis HyperLogLog
 
+* Redis 在 2.8.9 版本添加了 HyperLogLog 结构。
+
 * Redis HyperLogLog 是用来做基数统计的算法，HyperLogLog 的优点是，在输入元素的数量或者体积非常非常大时，计算基数所需的空间总是固定的、并且是很小的。
 
 * 在 Redis 里面，每个 HyperLogLog 键只需要花费 12 KB 内存，就可以计算接近 2^64 个不同元素的基 数。这和计算基数时，元素越多耗费内存就越多的集合形成鲜明对比。
