--- a/_posts/2016-2-23-linux.md
+++ b/_posts/2016-2-23-linux.md
@@ -17,8 +17,10 @@ excerpt:
  
 * 复制文件：
 
-        (sudo) cp 文件 目标目录
-    
+        (sudo) cp 文件 目标目录、
+        
+* 远程复制文件可以使用FTP工具wincp    
+
 ---
 
 > 参考文章：
