--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -25,6 +25,13 @@ excerpt:
 
 ---
 
+#### 设置颜色
+
+        Android 代码中使用Color工具类 方法parseColor解析
+        view.setBackgroundColor(Color.parseColor("#365663"));
+
+---
+
 
 > 参考文章：
 
