--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -29,7 +29,31 @@ excerpt:
 
         Android 代码中使用Color工具类 方法parseColor解析
         view.setBackgroundColor(Color.parseColor("#365663"));
+        
+---
 
+#### 添加分割线的方法
+
+* 自己在drawable下新建xml文件
+
+        <?xml version="1.0" encoding="utf-8"?>
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="line" >
+            
+            <stroke 
+                android:color="#d4d4d4" />
+            
+        </shape>
+
+* 使用view
+
+        <View 
+           android:id="@+id/tab_line"
+           android:layout_width="match_parent"
+           android:layout_height="1dp"
+           android:background="#d4d4d4"
+           android:layout_alignParentBottom="true"/>
+           
 ---
 
 
