--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -35,7 +35,8 @@ excerpt:
 #### 添加分割线的方法
 
 * 自己在drawable下新建xml文件
-
+        
+        实线
         <?xml version="1.0" encoding="utf-8"?>
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="line" >
@@ -44,6 +45,19 @@ excerpt:
                 android:color="#d4d4d4" />
             
         </shape>
+        
+        虚线
+        <?xml version="1.0" encoding="utf-8"?>  
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"  
+            android:shape="line" >  
+            <stroke  
+                android:dashGap="3dp"  
+                android:dashWidth="6dp"  
+                android:width="1dp"  
+                android:color="#63a219" />  
+            <!-- 虚线的高度 -->  
+            <size android:height="1dp" />  
+        </shape>  
 
 * 使用view
 
