--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -34,7 +34,7 @@ excerpt:
 
 #### 添加分割线的方法
 
-* 自己在drawable下新建xml文件
+* 自己在drawable下新建xml文件，然后在textView引用
         
         实线
         <?xml version="1.0" encoding="utf-8"?>
@@ -58,6 +58,11 @@ excerpt:
             <!-- 虚线的高度 -->  
             <size android:height="1dp" />  
         </shape>  
+        
+        <TextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:background="@drawable/line" />
 
 * 使用view
 
