--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -75,6 +75,14 @@ excerpt:
            
 ---
 
+#### listView相关
+
+* 要想让ListView显示底部的分割线，需要同事满足以下的选项:
+        1）mFooterDividersEnabled 必须为true，其默认值是true的
+        2)ListView的高度必须为match_parent。
+        
+---
+
 
 > 参考文章：
 
