--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -80,7 +80,29 @@ excerpt:
 * 要想让ListView显示底部的分割线，需要同事满足以下的选项:
         1）mFooterDividersEnabled 必须为true，其默认值是true的
         2)ListView的高度必须为match_parent。
-        
+
+* listview的应用中很常见的一种便是item的布局不知简单的一种，对于有多种布局的情况，一般需要重写适配器adapter
+
+        思路为：
+        1. 首先为不同的item类型编写布局layout文件和class类文件
+        2. 选好用来传递数据给适配器的工具,常见的有HashMap<String, Object> map、ArrayList<Message> moreItemList;如：
+            使用message来传递信息：            
+            moreItemList = new ArrayList<Message>();
+            MoreItem free_collect = new MoreItem("免费收录", R.drawable.free_collect, R.drawable.tag_more);
+			Message collect = new Message();
+			collect.obj = free_collect;     //obj用来传递数据
+			collect.what = img_text;    //what作为标记位
+			moreItemList.add(collect);
+            
+            取信息：
+            Message msg = moreItemList.get(position);
+            holderText.text.setText(msg.obj.toString());
+            holderImageText.image.setImageResource(((MoreItem)msg.obj).getImageId());
+            
+        3. 初始化数据
+        4. MoreItemAdapter adapter = new MoreItemAdapter(MoreActivity.this, moreItemList);
+			moreListView.setAdapter(adapter);
+
 ---
 
 
