--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -72,7 +72,16 @@ excerpt:
            android:layout_height="1dp"
            android:background="#d4d4d4"
            android:layout_alignParentBottom="true"/>
-           
+ 
+* 添加竖线
+
+        <ImageView
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="1dp"
+            android:background="#ebebeb"
+            android:layout_gravity="center_horizontal" />
+            
 ---
 
 #### listView相关
@@ -81,7 +90,7 @@ excerpt:
         1）mFooterDividersEnabled 必须为true，其默认值是true的
         2)ListView的高度必须为match_parent。
 
-* listview的应用中很常见的一种便是item的布局不知简单的一种，对于有多种布局的情况，一般需要重写适配器adapter
+* listview的应用中很常见的一种便是item的布局不是简单的一种，对于有多种布局的情况，一般需要重写适配器adapter
 
         思路为：
         1. 首先为不同的item类型编写布局layout文件和class类文件
@@ -89,10 +98,10 @@ excerpt:
             使用message来传递信息：            
             moreItemList = new ArrayList<Message>();
             MoreItem free_collect = new MoreItem("免费收录", R.drawable.free_collect, R.drawable.tag_more);
-			Message collect = new Message();
-			collect.obj = free_collect;     //obj用来传递数据
-			collect.what = img_text;    //what作为标记位
-			moreItemList.add(collect);
+            Message collect = new Message();
+            collect.obj = free_collect;     //obj用来传递数据
+            collect.what = img_text;    //what作为标记位
+            moreItemList.add(collect);
             
             取信息：
             Message msg = moreItemList.get(position);
@@ -101,8 +110,25 @@ excerpt:
             
         3. 初始化数据
         4. MoreItemAdapter adapter = new MoreItemAdapter(MoreActivity.this, moreItemList);
-			moreListView.setAdapter(adapter);
+            moreListView.setAdapter(adapter);
 
+---
+
+#### intent 传递图片
+        
+        #发送图片
+        Intent intent = new Intent(this.mContext, AccountDetailActivity.class);
+        holder.account_image.setDrawingCacheEnabled(true);
+        intent.putExtra("account_img", holder.account_image.getDrawingCache());
+        this.mContext.startActivity(intent);
+        
+        #接收图片
+        Bitmap bitmap = (Bitmap) getIntent().getParcelableExtra("account_img");
+        Matrix matrix = new Matrix();//放大图片
+        matrix.postScale(1.2f, 1.2f);
+        Bitmap bm = Bitmap.createBitmap(bitmap, 0, 0, bitmap.getWidth(), bitmap.getHeight(), matrix, true);
+        accountImg.setImageBitmap(bm);
+        
 ---
 
 
