--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -86,7 +86,7 @@ excerpt:
 
 #### listView相关
 
-* 要想让ListView显示底部的分割线，需要同事满足以下的选项:
+* 要想让ListView显示底部的分割线，需要同时满足以下的选项:
         1）mFooterDividersEnabled 必须为true，其默认值是true的
         2)ListView的高度必须为match_parent。
 
@@ -129,6 +129,36 @@ excerpt:
         Bitmap bm = Bitmap.createBitmap(bitmap, 0, 0, bitmap.getWidth(), bitmap.getHeight(), matrix, true);
         accountImg.setImageBitmap(bm);
         
+---
+
+#### 颜色
+
+        android 定义颜色color时6位或8位值的区别
+    　　6位（#000000）就是RGB值
+    　　8位（#1e000000）头两位是透明度，后6位是RGB值，00是完全透明，ff是完全不透明，比较适中的透明度值是 1e
+
+---
+
+#### 点击事件的设置
+
+        LinearLayout category;
+        category.setClickable(true);//使能点击,false则不能点击
+        category.setOnClickListener(new OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                Intent intent = new Intent(mContext, ChildCatsActivity.class);
+                mContext.startActivity(intent);
+            }
+        });
+
+---
+
+#### 获取手机的imei码
+
+        在manifest.xml文件中要添加 <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+        TelephonyManager tm = (TelephonyManager) this.getSystemService(TELEPHONY_SERVICE);  
+        String imei = tm.getDeviceId();//String     
+
 ---
 
 
