add android-AsyncTask, update android

--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -161,6 +161,17 @@ excerpt:
 
 ---
 
+#### 项目中用到的开源插件
+
+* [ImageLoader](https://github.com/nostra13/Android-Universal-Image-Loader)图片加载
+
+* [PagerSlidingTabStrip](https://github.com/astuetz/PagerSlidingTabStrip)水平滚动导航栏
+
+* [okhttp](https://github.com/square/okhttp)网络请求
+
+
+---
+
 
 > 参考文章：
 
