--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -153,6 +153,76 @@ excerpt:
 
 ---
 
+#### 点击改变imageView的图片资源ID
+
+        like.setOnClickListener(new OnClickListener() {
+			
+			@Override
+			public void onClick(View v) {
+				Integer integer = (Integer) like.getTag();
+				integer = integer == null ? 0 : integer;
+				switch(integer) {
+				case R.drawable.like_normal:
+					like.setImageResource(R.drawable.like_select);
+					like.setTag(R.drawable.like_select);
+					break;
+				case R.drawable.like_select:
+					like.setImageResource(R.drawable.like_normal);
+					like.setTag(R.drawable.like_normal);
+					break;
+				default:
+					like.setImageResource(R.drawable.like_normal);
+					like.setTag(R.drawable.like_normal);
+					break;
+				}
+			}
+		});
+
+---
+
+#### 复制信息到系统剪贴板
+
+        // 从API11开始android推荐使用android.content.ClipboardManager
+        // 为了兼容低版本我们这里使用旧版的android.text.ClipboardManager，虽然提示deprecated，但不影响使用。
+        ClipboardManager cm = (ClipboardManager) getSystemService(Context.CLIPBOARD_SERVICE);
+        // 将文本内容放到系统剪贴板里。
+        cm.setText(tvMsg.getText());
+        Toast.makeText(this, "复制成功，可以发给朋友们了。", Toast.LENGTH_LONG).show();
+
+---
+
+#### 打开其他应用，如微信等
+
+        Intent intent = new Intent();
+
+        ComponentName cmp = new ComponentName("com.sina.weibo","com.sina.weibo.EditActivity");
+        intent.setAction(Intent.ACTION_MAIN);
+        intent.addCategory(Intent.CATEGORY_LAUNCHER);
+        intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+        intent.setComponent(cmp);
+        startActivityForResult(intent, 0);
+        
+        几个常用的Package命令：
+
+        新浪微博（编辑界面）：com.sina.weibo     com.sina.weibo.EditActivity
+
+        腾讯微博（编辑界面）：com.tencent.WBlog    com.tencent.WBlog.activity.MicroblogInput
+
+        微信：                com.tencent.mm      com.tencent.mm.ui.LauncherUI
+        QQ:                   com.tencent.mobileqq com.tencent.mobileqq.activity.HomeActivity
+
+---
+
+#### ScrollView的简单应用
+
+        <ScrollView 
+            android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_height="match_parent"
+            android:scrollbars="none"   //滚动条隐藏
+            xmlns:tools="http://schemas.android.com/tools"></ScrollView>
+
+---
+
 #### 获取手机的imei码
 
         在manifest.xml文件中要添加 <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -168,7 +238,6 @@ excerpt:
 * [PagerSlidingTabStrip](https://github.com/astuetz/PagerSlidingTabStrip)水平滚动导航栏
 
 * [okhttp](https://github.com/square/okhttp)网络请求
-
 
 ---
 
