--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -180,6 +180,47 @@ excerpt:
 
 ---
 
+#### 点击或者按压改变颜色，包括ImageView、TextView、Button等
+
+        步骤一：在res/drawable目录下新建xml文件
+        
+        <?xml version="1.0" encoding="utf-8"?>
+        <selector xmlns:android="http://schemas.android.com/apk/res/android" >
+            
+            //设置颜色
+            <item android:state_pressed="true" android:color="#00bc44"/>    //按下时候的颜色
+            <item android:state_pressed="false" android:color="#717171"/>
+             
+            //设置图片
+            <item android:state_selected="true" android:drawable="@drawable/more_select" />     //被选中时的图片
+    
+            <item android:state_selected="false" android:drawable="@drawable/more_normal" />
+
+        </selector>
+        
+        步骤二：在对应的ImageView、TextView、Button中设置属性，ImageView/Button的background属性，textView的color属性
+        <TextView 
+            android:id="@+id/subscribe_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:text="订阅"
+            android:textSize="18sp"
+            android:textColor="@drawable/subscribetext_selector"/>
+
+---
+
+#### 返回上一个活动：直接把当前的活动finish()
+
+        tagBack.setOnClickListener(new OnClickListener() {
+			@Override
+			public void onClick(View v) {
+				AccountDetailActivity.this.finish();
+			}
+		});
+
+---
+
 #### 复制信息到系统剪贴板
 
         // 从API11开始android推荐使用android.content.ClipboardManager
@@ -238,6 +279,8 @@ excerpt:
 * [PagerSlidingTabStrip](https://github.com/astuetz/PagerSlidingTabStrip)水平滚动导航栏
 
 * [okhttp](https://github.com/square/okhttp)网络请求
+
+* 官方的下拉刷新控件：SwipeRefreshLayout
 
 ---
 
