--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -282,6 +282,8 @@ excerpt:
 
 * 官方的下拉刷新控件：SwipeRefreshLayout
 
+* [SwipeMenuListView](https://github.com/baoyongzhang/SwipeMenuListView) listview滑动删除
+
 ---
 
 
