--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -264,6 +264,25 @@ excerpt:
 
 ---
 
+#### 使用styles.xml编写布局
+
+        项目中有时候会有很多重复的布局，这时候可以编写values/styles.xml，来避免重复写控件的属性：
+        如：
+        <style name="usercenter_text_bottom">
+            <item name="android:layout_width">wrap_content</item>
+            <item name="android:layout_height">wrap_content</item>
+            <item name="android:textColor">#a6a6a6</item>
+            <item name="android:textSize">14sp</item>
+        </style>
+        
+        然后在布局对应的控件中引用：
+        <TextView
+            android:id="@+id/tv_user_message"
+            android:text="10条未读消息"
+            style="@style/usercenter_text_bottom"/>
+
+---
+
 #### 获取手机的imei码
 
         在manifest.xml文件中要添加 <uses-permission android:name="android.permission.READ_PHONE_STATE" />
