--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -291,6 +291,16 @@ excerpt:
 
 ---
 
+#### 通过资源名称获取资源ID
+
+        ImageView iv = new ImageView(getContext());
+        iv.setBackgroundResource(getResources().getIdentifier(getContext().getPackageName() + ":" + name, null, null));
+        其中name可以是存储在json中的字符串，如：drawable/user_image;
+        若json中存储的是user_image,则只要改":"为":drawable/"
+        即第一个参数为完整的资源路径
+        
+---
+
 #### 项目中用到的开源插件
 
 * [ImageLoader](https://github.com/nostra13/Android-Universal-Image-Loader)图片加载
