--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -301,9 +301,75 @@ excerpt:
         
 ---
 
+#### EditText 
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:hint="请输入新的密码"
+            android:background="@null"  //消除下划线等背景
+            android:lines="1"
+            android:maxLines="1"        //限制行数
+            android:inputType="textPassword"    //限制输入的类型
+            android:maxLength="10"              //限制最大输入字符个数为10 
+            android:imeOptions="actionNext"     //设置输入法回车键的功能,如:actionNext,下一项；actionDone:完成
+            android:layout_weight="1"
+            android:textColor="#404040"
+            android:textColorHint="#b4b4b4"/>     //设置提示的字体颜色
+
+---
+
+#### 时间格式转化
+
+        import java.text.SimpleDateFormat;  
+        import java.util.Date; 
+
+        // 转化时间格式，例如：cc_time=1291778220
+        private String getStrTime(String cc_time) {
+            String re_StrTime = null;
+            SimpleDateFormat sdf = new SimpleDateFormat("yyyy年MM月dd日HH时mm分ss秒");
+            long lcc_time = Long.valueOf(cc_time);
+            re_StrTime = sdf.format(new Date(lcc_time * 1000L));
+
+            return re_StrTime;
+        }
+
+---
+
+#### 时间选择对话框，应用场景：选择生日等
+
+        private static final int DATE_DIALOG = 0;
+        private Calendar c = null;
+
+        @Override
+        protected Dialog onCreateDialog(int id) {
+
+            Dialog dialog = null;
+            switch (id) {
+                case DATE_DIALOG:
+                    c = Calendar.getInstance();
+                    dialog = new DatePickerDialog(UserInformationActivity.this, new DatePickerDialog.OnDateSetListener() {
+                        @Override
+                        public void onDateSet(DatePicker view, int year, int monthOfYear, int dayOfMonth) {
+                            birthday.setText(year + "年" + (monthOfYear + 1) + "月" + dayOfMonth + "日");
+                        }
+                    },
+                    c.get(Calendar.YEAR),c.get(Calendar.MONTH),c.get(Calendar.DAY_OF_MONTH));
+
+                    break;
+            }
+            return dialog;
+        }
+        
+        直接调用showDialog(DATE_DIALOG);
+
+---
+
 #### 项目中用到的开源插件
 
 * [ImageLoader](https://github.com/nostra13/Android-Universal-Image-Loader)图片加载
+
+* [ImagePicker](https://github.com/jeasonlzy0216/ImagePicker) 图片选择器
 
 * [PagerSlidingTabStrip](https://github.com/astuetz/PagerSlidingTabStrip)水平滚动导航栏
 
