--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -365,6 +365,33 @@ excerpt:
 
 ---
 
+#### 绑定手机
+
+        Pattern phonePattern = Pattern.compile("^(0|86|17951)?(13[0-9]|15[012356789]|17[678]|18[0-9]|14[57])[0-9]{8}$");
+        Matcher phoneMatcher = phonePattern.matcher(phoneString);
+        if (!phoneMatcher.matches()) {
+            FLDDialogUtil.showErrorDialog(this, "亲， 请输入正确的手机号码");
+        }
+        
+        //验证码重新发送倒计时
+        new CountDownTimer(countDown*1000, 1000) {
+            @Override
+            public void onTick(long millisUntilFinished) {
+                tvVerifyCode.setText(millisUntilFinished/1000 + "秒后重新发送");
+            }
+
+            @Override
+            public void onFinish() {
+                tvVerifyCode.setText("获取验证码");
+                tvVerifyCode.setEnabled(true);
+                countDownLooping = false;
+            }
+
+        }.start();
+
+
+---
+
 #### 项目中用到的开源插件
 
 * [ImageLoader](https://github.com/nostra13/Android-Universal-Image-Loader)图片加载
@@ -374,6 +401,8 @@ excerpt:
 * [PagerSlidingTabStrip](https://github.com/astuetz/PagerSlidingTabStrip)水平滚动导航栏
 
 * [okhttp](https://github.com/square/okhttp)网络请求
+
+* [PermissionsDispatcher](https://github.com/hotchemi/PermissionsDispatcher) 运行时权限管理
 
 * 官方的下拉刷新控件：SwipeRefreshLayout
 
