--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -315,7 +315,8 @@ excerpt:
             android:imeOptions="actionNext"     //设置输入法回车键的功能,如:actionNext,下一项；actionDone:完成
             android:layout_weight="1"
             android:textColor="#404040"
-            android:textColorHint="#b4b4b4"/>     //设置提示的字体颜色
+            android:textColorHint="#b4b4b4"     //设置提示的字体颜色
+            android:textCursorDrawable="@null"/>    //设置光标的颜色，@null即表示与字体颜色一样
 
 ---
 
@@ -401,6 +402,8 @@ excerpt:
 * [PagerSlidingTabStrip](https://github.com/astuetz/PagerSlidingTabStrip)水平滚动导航栏
 
 * [okhttp](https://github.com/square/okhttp)网络请求
+
+* [datetimepicker] (https://github.com/flavienlaurent/datetimepicker) 日历、时间选择
 
 * [PermissionsDispatcher](https://github.com/hotchemi/PermissionsDispatcher) 运行时权限管理
 
