--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -317,6 +317,9 @@ excerpt:
             android:textColor="#404040"
             android:textColorHint="#b4b4b4"     //设置提示的字体颜色
             android:textCursorDrawable="@null"/>    //设置光标的颜色，@null即表示与字体颜色一样
+            
+        密码不可见：editText.setTransformationMethod(PasswordTransformationMethod.getInstance());
+        密码可见： editText.setTransformationMethod(HideReturnsTransformationMethod.getInstance());
 
 ---
 
