--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -323,6 +323,34 @@ excerpt:
 
 ---
 
+#### 用framelayout实现图片上加提示数字
+
+        <FrameLayout
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="10dp">
+
+            <ImageView
+                android:id="@+id/iv_itemAlbum_img"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginRight="5dp"
+                android:src="@mipmap/placeholder_square"/>
+
+            <TextView
+                android:id="@+id/tv_album_item_count"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="right|bottom"   //标记位于图片的右下角
+                android:gravity="center"
+                android:text="1"
+                android:textColor="#ffffff"
+                android:background="@drawable/shape_usercenter_item_album_count"/>
+
+        </FrameLayout>
+
+---
+
 #### 时间格式转化
 
         import java.text.SimpleDateFormat;  
