--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -351,6 +351,17 @@ excerpt:
 
 ---
 
+#### 判断网络连接状态
+
+        //判断网络连接状态
+        private boolean isNetworkConnected(Context context) {
+            ConnectivityManager cm = (ConnectivityManager) context.getSystemService(context.CONNECTIVITY_SERVICE);
+            NetworkInfo ni = cm.getActiveNetworkInfo();
+            return ni != null && ni.isConnectedOrConnecting();
+        }
+
+---
+
 #### 时间格式转化
 
         import java.text.SimpleDateFormat;  
