--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -359,7 +359,38 @@ excerpt:
             NetworkInfo ni = cm.getActiveNetworkInfo();
             return ni != null && ni.isConnectedOrConnecting();
         }
-
+        
+        //监听网络状态
+        //编写监听广播
+        public class NetworkReceiver extends BroadcastReceiver {
+            @Override
+            public void onReceive(Context context, Intent intent) {
+                Log.i("NetworkReceiver", "NetworkReceiver");
+                ConnectivityManager cm = (ConnectivityManager) context.getSystemService(context.CONNECTIVITY_SERVICE);
+                NetworkInfo networkInfo = cm.getActiveNetworkInfo();
+                if (cm != null && networkInfo != null && networkInfo.isAvailable()) {
+                    reloadData();
+                }
+            }
+        }
+        //静态注册
+        <receiver android:name=".base.PullRequestMoreActivity$NetworkReceiver">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+            </intent-filter>
+        </receiver>
+        //或是动态注册
+        @Override
+        protected void onCreate(Bundle savedInstanceState) {
+            super.onCreate(savedInstanceState);
+            setContentView(R.layout.activity_main);
+            
+            intentFilter = new IntentFilter();
+            intentFilter.addAction("android.net.conn.CONNECTIVITY_CHANGE");
+            NetworkReceiver = new NetworkReceiver();
+            registerReceiver(NetworkReceiver, intentFilter);
+        }
+        
 ---
 
 #### 时间格式转化
