--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -466,6 +466,42 @@ excerpt:
 
 ---
 
+#### 双击返回键退出程序
+
+        private static boolean isExit = false;
+        @Override
+        public boolean onKeyUp(int keyCode, KeyEvent event) {
+
+            if(keyCode==KeyEvent.KEYCODE_BACK){
+
+                if(!isExit){
+                    isExit = true;
+                    Toast.makeText(this, "再按一次后退键退出程序!", Toast.LENGTH_SHORT).show();
+                    new CountDownTimer(2200,2200){
+
+                        @Override
+                        public void onTick(long millisUntilFinished) {
+                        }
+
+                        @Override
+                        public void onFinish() {
+                            isExit = false;
+                        }
+                    }.start();
+                }else{
+                    finish();
+                }
+
+                return false;
+
+
+            }
+
+            return super.onKeyUp(keyCode, event);
+        }
+
+---
+
 #### 项目中用到的开源插件
 
 * [ImageLoader](https://github.com/nostra13/Android-Universal-Image-Loader)图片加载
