--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -502,6 +502,13 @@ excerpt:
 
 ---
 
+#### 让软键盘消失
+
+        InputMethodManager imm = (InputMethodManager) getSystemService(INPUT_METHOD_SERVICE);   
+        imm.toggleSoftInput(0, InputMethodManager.HIDE_NOT_ALWAYS);
+
+---
+
 #### 项目中用到的开源插件
 
 * [ImageLoader](https://github.com/nostra13/Android-Universal-Image-Loader)图片加载
