--- a/_posts/2016-5-27-java.md
+++ b/_posts/2016-5-27-java.md
@@ -39,6 +39,10 @@ excerpt:
 * 静态代码块
         static代码块也叫静态代码块，是在类中独立于类成员的static语句块，可以有多个，位置可以随便放，它不在任何的方法体内，JVM加载类时会执行这些静态的代码块，如果static代码块有多个，JVM将按照它们在类中出现的先后顺序依次执行它们，每个代码块只会被执行一次。
 
+> final 
+
+        final 对于常量来说，意味着值不能改变，例如 final int i=100。这个i的值永远都是100。但是对于变量来说又不一样，只是标识这个引用不可被改变，如final File f=new File("c:\\test.txt");那么这个f一定是不能被改变的，如果f本身有方法修改其中的成员变量，例如是否可读，是允许修改的。
+        
 ---
 
 #### Java权限
