--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -509,7 +509,35 @@ excerpt:
 
 ---
 
+#### 不需要放到版本控制中
+
+        Androidstudio是用gradle来构建项目的，有很多环境方面的文件都不需要增加到SVN版本库。
+        以下为列出不需要增加到版本库的文件：
+        .idea 文件夹，此文件夹是用来保存开发工具的设置信息。
+        .gradle 文件夹，此文件夹是用来保存gradle的依赖信息。
+        所有的 build 文件夹，build文件夹是用来保存编译后的文件目录。
+        所有的 .iml 文件，是用来保存开发工具信息。
+        local.properties 文件，是用来保存项目依赖信息。
+
+---
+
+#### 向上取整Math.ceil（）返回的是大于或等于函数参数，并且与之最接近的整数。
+
+---
+
 #### 项目中用到的开源插件
+
+* [sweet-alert-dialog] (https://github.com/pedant/sweet-alert-dialog) 一款漂亮的弹框dialog，可以定制多种样式
+
+* [StickyNavLayout] (https://github.com/ta893115871/StickyNavLayout) 多功能的一个库，支持下拉刷新，包括顶部内容区域，水平导航，ViewPager
+
+* [SwipeBackLayout] (https://github.com/ikew0ng/SwipeBackLayout) 滑动返回上一个活动，可以定义滑动的方向
+
+* [EnhancedListView] (https://github.com/timroes/EnhancedListView) ListView侧滑删除
+
+* [RoundedImageView] (https://github.com/vinc3m1/RoundedImageView) 能让图片显示成圆角的一款插件
+
+* [pinned-section-listview](https://github.com/beworker/pinned-section-listview) 分组并能固定标题的ListView
 
 * [ImageLoader](https://github.com/nostra13/Android-Universal-Image-Loader)图片加载
 
