--- a/_posts/2016-5-27-java.md
+++ b/_posts/2016-5-27-java.md
@@ -65,6 +65,18 @@ excerpt:
 
 ---
 
+#### Map<String, String> 遍历方法
+
+        for (Map.Entry<String, String> entry : params.entrySet()) {
+            bodyBuilder.addFormDataPart(entry.getKey(),entry.getValue());
+        }
+
+        解释：
+        params.entrySet（）是将params里的每一个键值对取出来封装成一个Entry对象在存到一个Set里面；
+        Map.Entry<String, String>的意思是一个泛型，表示Entry里装的是两个string的字符串，分别是params的key和value。
+
+---
+
 > 参考文章：
 
 ---
