--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -525,6 +525,12 @@ excerpt:
 
 ---
 
+#### viewpager
+
+* viewpager.getCurrentItem()可以得到当前的标签是第几个
+
+---
+
 #### 项目中用到的开源插件
 
 * [sweet-alert-dialog] (https://github.com/pedant/sweet-alert-dialog) 一款漂亮的弹框dialog，可以定制多种样式
