--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -563,6 +563,13 @@ excerpt:
 
 ---
 
+#### 发布自己的开源项目到jcenter和Maven Central，这样其他开发者可以很简单的引用项目
+
+* [如何使用Android Studio把自己的Android library分享到jCenter和Maven Central](http://www.open-open.com/lib/view/open1435109824278.html)
+
+
+---
+
 
 > 参考文章：
 
