--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -567,7 +567,47 @@ excerpt:
 
 * [如何使用Android Studio把自己的Android library分享到jCenter和Maven Central](http://www.open-open.com/lib/view/open1435109824278.html)
 
+* [上传android library 到bintray.](http://www.jianshu.com/p/499a086e3bab)
 
+*步骤：
+
+        1.申请好[bintray官网 ](https://bintray.com/)的账号，建好Package
+        2.准备好要上传的项目
+        3.利用发布工具[novoda](https://github.com/novoda/bintray-release)配置项目
+        
+        配置点如下：
+        1. project的builde gradle下加：classpath 'com.novoda:bintray-release:0.3.4'
+        2. APP的builde gradle下加apply plugin: 'com.novoda.bintray-release' 这句话 需要放在com.android.library 下面
+        3. publish {
+            userOrg = 'snowdream1314'
+            groupId = 'com.snowdream1314'   //唯一包名
+            artifactId = 'enhancedpulltorefreshlistview'    //之前最初在bintary的maven中创建的那个package的名字
+            publishVersion = '1.0.0'    //版本
+            desc = 'An Android sample integrates EnhancedListView with PullToRefresh'   //项目描述
+            website = 'https://github.com/snowdream1314/EnhancedPullToRefreshListView'
+        }
+        
+        最后在android studio 终端Terminal运行：
+        4. gradlew clean build bintrayUpload -PbintrayUser=BINTRAY_USERNAME -PbintrayKey=BINTRAY_KEY -PdryRun=false
+           其中BINTRAY_USERNAME为你在bintary注册的名字，BINTRAY_KEY为bintary账号下的APIKey
+        
+* 错误：
+        主要是网络连接错误之类的。直接多试几次就OK了。
+
+---
+
+#### 修改项目的包名
+
+* 主要参考[Android Studio Rename Package](http://stackoverflow.com/questions/16804093/android-studio-rename-package)
+
+* 步骤：
+
+        1. In your Project pane, click on the little gear icon ( Gears icon )
+        2. Uncheck / De-select the Compact Empty Middle Packages option
+        （这样就能修改中间的名字， 比如com.snowdream.enhancedpulltorefreshlistview改成com.snowdream1314.enhancedpulltorefreshlistview）
+        3. Refactor -> Rename就行了
+        4. 重新编译一下
+        
 ---
 
 
